# sphinxcontrib-metadata

./: pyproject.toml
